@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 0.0.1
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Wed Feb 27 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 0.0.1
 - This is the initial code for a `pupmod-simp-rkhunter` module, which 
   installs and configures rkhunter and unhide.
